# rt-spark-home-assistant

./: .config  .gitignore  CMakeLists.txt  LICENSE  README.md  rtconfig.h  st-link.cfg
applications/: aht_10.c  aht_10.h  main.c  mqtt_client.c  mqtt_client.h  test.c  usart3.c  usart3.h  wifi_connection.c  wifi_connection.h
board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Src/: stm32f4xx_hal_msp.c
board/ports/led_matrix/: drv_matrix_led.c  drv_matrix_led.h
